--- a/config/prj-medea-mateselection.properties
+++ b/config/prj-medea-mateselection.properties
@@ -28,13 +28,10 @@ gControllerType = 1 		# MLP=0, Perceptron=1, Elman=2
 gNbOfLandmarks = 1 # 6, 18
 gNbOfPhysicalObjects = 0 # 300
 
-gEvaluationTime =   400
-gMaxIt = 80400 #-1
-
 gSensorRange = 16
 gSynchronization = true # not implemented
 
-gDisplayMode = 0
+gDisplayMode = 1
 gBatchMode = false
 
 gRandomSeed = -1
@@ -43,7 +40,18 @@ gVerbose = true
 
 # =-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=
 
-gMaxNbGenomeTransmission = 2
+gMaxIt = 80400 #-1
+
+gEvaluationTime =   400
+
+gDeafState = false							# true: when dead, switching to listening state is delayed
+gDeafStateDuration = 400				# -1: infinite ; ignored if gDeafState=false
+gListenState = true								# if false: deaf is eternal. Whatever gDeafStateDuration
+gListenStateDuration = 400					# -1: infinite ; ignored if gListenState=false
+
+gLimitGenomeTransmission = true		# optional: default is false
+gMaxNbGenomeTransmission = 2    		# optional
+gSelectionMethod = 0							# optional (default is 0) ; 0: random ; 1: first
 
 # =-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=
 
@@ -148,7 +156,7 @@ gNeuronWeightRange = 800.0  # [-400,+400]
 
 # simulation parameters
 
-gRadioNetwork = true
+	 = true
 gMaxRadioDistance = 16  # not used. Assume proximity sensor distance.
 
 gMonitorPositions = false # slow down if true.
