updating project MateSelection

--- a/config/prj-medea-mateselection.properties
+++ b/config/prj-medea-mateselection.properties
@@ -44,13 +44,12 @@ gMaxIt = 80400 #-1
 
 gEvaluationTime =   400
 
-gDeafState = false							# true: when dead, switching to listening state is delayed
-gDeafStateDuration = 400				# -1: infinite ; ignored if gDeafState=false
-gListenState = true								# if false: deaf is eternal. Whatever gDeafStateDuration
-gListenStateDuration = 400					# -1: infinite ; ignored if gListenState=false
+gListeningState = false								# if false: ignore gDeafStateDelay, stay deaf.
+gNotListeningStateDuration = 0				# -1: infinite ; ignored if gDeafState=false
+gListeningStateDelay = -1						# must be >=0 ; ignored if gListenState=false.
 
-gLimitGenomeTransmission = true		# optional: default is false
-gMaxNbGenomeTransmission = 2    		# optional
+gLimitGenomeTransmission = false		# optional: default is false
+gMaxNbGenomeTransmission = 2    		# optional (ignored if gLimitGenomeTransmission is false)
 gSelectionMethod = 0							# optional (default is 0) ; 0: random ; 1: first
 
 # =-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=
@@ -156,7 +155,7 @@ gNeuronWeightRange = 800.0  # [-400,+400]
 
 # simulation parameters
 
-	 = true
+gRadioNetwork = true
 gMaxRadioDistance = 16  # not used. Assume proximity sensor distance.
 
 gMonitorPositions = false # slow down if true.
