updating project MateSelection: added listening/notlistening time before re-activating an agent

--- a/config/prj-medea-mateselection.properties
+++ b/config/prj-medea-mateselection.properties
@@ -40,17 +40,17 @@ gVerbose = true
 
 # =-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=
 
-gMaxIt = 80400 #-1
+gMaxIt = -1 # 80400 #-1
 
 gEvaluationTime =   400
 
-gListeningState = false								# if false: ignore gDeafStateDelay, stay deaf.
-gNotListeningStateDuration = 0				# -1: infinite ; ignored if gDeafState=false
-gListeningStateDelay = -1						# must be >=0 ; ignored if gListenState=false.
+gNotListeningStateDelay = 400				# -1: infinite  ; 0: no delay (default) ; >0: delay
+gListeningStateDelay = -1					# -1: infinite (default) ; 0: no delay  ; >0: delay 
+														# (ignored if gNotListeningStateDelay=-1)
 
 gLimitGenomeTransmission = false		# optional: default is false
-gMaxNbGenomeTransmission = 2    		# optional (ignored if gLimitGenomeTransmission is false)
-gSelectionMethod = 0							# optional (default is 0) ; 0: random ; 1: first
+gMaxNbGenomeTransmission = 2    		# optional: (ignored if gLimitGenomeTransmission is false)
+gSelectionMethod = 0							# optional: (default is 0) ; 0: random ; 1: first
 
 # =-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=
 
