--- a/config/neatTest.properties
+++ b/config/neatTest.properties
@@ -129,44 +129,44 @@ gLocomotionMode = 0
 
 # Neural networks
 
-gNbHiddenLayers = 0
-gNbNeuronsPerHiddenLayer = 5
-gNeuronWeightRange = 10.0  # [-5,+5]
+#gNbHiddenLayers = 0
+#gNbNeuronsPerHiddenLayer = 5
+#gNeuronWeightRange = 10.0  # [-5,+5]
 
 
 # =-=-=-=-=-=
 
 # simulation parameters
 
-gRadioNetwork = true
-gMaxRadioDistance = 16  # not used. Assume proximity sensor distance.
+#gRadioNetwork = true
+#gMaxRadioDistance = 16  # not used. Assume proximity sensor distance.
 
-gMonitorPositions = false # slow down if true.
+#gMonitorPositions = false # slow down if true.
 
 # =-=-=-=-=-=
 
 # parameters wrt. mEDEA
 
-gSigmaMin = 0.001
-gProbaMutation = 0.0
-gUpdateSigmaStep = 0.35
-gSigmaRef = 0.3
-gSigmaMax = 1.0
+#gSigmaMin = 0.001
+#gProbaMutation = 0.0
+#gUpdateSigmaStep = 0.35
+#gSigmaRef = 0.3
+#gSigmaMax = 1.0
 
 # =-=-=-=-=-=
 
 # Robot energy
 
-gEnergyLevel = false # false: energy is not used
-gEnergyInit = 400
-gEnergyMax = 400
-gEnergyRequestOutput = false
-gEnergyRefill = true # robot energy refill
+#gEnergyLevel = false # false: energy is not used
+#gEnergyInit = 400
+#gEnergyMax = 400
+#gEnergyRequestOutput = false
+#gEnergyRefill = true # robot energy refill
 
 # Landmarks
 
-VisibleLandmarks = true
-gLandmarkRadius = 10.0
+#VisibleLandmarks = true
+#gLandmarkRadius = 10.0
 
 # Physical objects
 
@@ -195,14 +195,14 @@ gEnergyItemDefaultInit = 100
 # =-=-=-=-=-=
 
 # landmarks. Check gNbOfLandmarks for max value.
-landmark[0].x = 850
-landmark[0].y = 800
+#landmark[0].x = 850
+#landmark[0].y = 800
 
 # Robots. Check gInitialNumberOfRobots for max value.
-robot[0].x = 100
-robot[0].y = 100
-robot[0].orientation = 90			# 0...359, clockwise -- default is 0.
-robot[0].groupId=0						# default is 0 anyway
+#robot[0].x = 100
+#robot[0].y = 100
+#robot[0].orientation = 90			# 0...359, clockwise -- default is 0.
+#robot[0].groupId=0						# default is 0 anyway
 
 #robot[256].x = 50
 #robot[256].y = 50
