--- a/config/neatTest.properties
+++ b/config/neatTest.properties
@@ -138,30 +138,30 @@ gLocomotionMode = 0
 
 # simulation parameters
 
-#gRadioNetwork = true
-#gMaxRadioDistance = 16  # not used. Assume proximity sensor distance.
+gRadioNetwork = true
+gMaxRadioDistance = 16  # not used. Assume proximity sensor distance.
 
-#gMonitorPositions = false # slow down if true.
+gMonitorPositions = false # slow down if true.
 
 # =-=-=-=-=-=
 
 # parameters wrt. mEDEA
 
-#gSigmaMin = 0.001
-#gProbaMutation = 0.0
-#gUpdateSigmaStep = 0.35
-#gSigmaRef = 0.3
-#gSigmaMax = 1.0
+gSigmaMin = 0.001
+gProbaMutation = 0.0
+gUpdateSigmaStep = 0.35
+gSigmaRef = 0.3
+gSigmaMax = 1.0
 
 # =-=-=-=-=-=
 
 # Robot energy
 
-#gEnergyLevel = false # false: energy is not used
-#gEnergyInit = 400
-#gEnergyMax = 400
-#gEnergyRequestOutput = false
-#gEnergyRefill = true # robot energy refill
+gEnergyLevel = false # false: energy is not used
+gEnergyInit = 400
+gEnergyMax = 400
+gEnergyRequestOutput = false
+gEnergyRefill = true # robot energy refill
 
 # Landmarks
 
