Log genome added. Property added to neat property files. Unused properties erased from WorldObserver

--- a/config/neatTest.properties
+++ b/config/neatTest.properties
@@ -40,6 +40,7 @@ gVerbose = false
 #
 
 ConfigurationLoaderObjectName = TopEDOConfigurationLoader
+gGenomeLogFolder = logs/genomes/
 
 gRobotMaskImageFilename = data/minirobot-mask.png
 gRobotSpecsImageFilename = data/minirobot-specs-2sensors.png
