Added previously used maps, added functionality to log fitness and trace back genealogy in a prespecified file (gEvolutionLogFile)

--- a/config/neatForag.properties
+++ b/config/neatForag.properties
@@ -11,19 +11,19 @@
 # Main simulation parameters
 #
 
-gInitialNumberOfRobots = 30 # 3000
+gInitialNumberOfRobots = 50 # 3000
 
 gExtendedSensoryInputs = true # Should be rewritten to suit your need. Check code.
 
 gControllerType = 0 		# NEAT
 
-gNbOfLandmarks = 0 # 6, 18
-gNbOfPhysicalObjects = 200 # 300
+gNbOfLandmarks = 0 
+gNbOfPhysicalObjects = 150
 
-gEvaluationTime =   1000
-gMaxIt = 1001000 #-1
+gEvaluationTime =   2000
+gMaxIt = 501000 #-1
 
-gSensorRange = 60
+gSensorRange = 20
 gSynchronization = true # not implemented
 
 gDisplayMode = 0
@@ -44,26 +44,16 @@ gGenomeLogFolder = logs/genomes/
 gEvolutionLogFile = logs/evolution.log
 
 gRobotMaskImageFilename = data/minirobot-mask.png
-gRobotSpecsImageFilename = data/minirobot-specs-2sensors.png
+gRobotSpecsImageFilename = data/minirobot-specs-8sensors.png
 
 # environment: 400, 600, 1000, 1400x800, 4000
-gForegroundImageFilename = data/env_1000_foreground.png
-gEnvironmentImageFilename = data/env_1000_environment.png
-#gForegroundImageFilename = data/door_env.png
-#gEnvironmentImageFilename = data/door_env.png
-gBackgroundImageFilename =  data/env_1000_background.png
-gGroundSensorImageFilename = data/env_1000_background.png
-gScreenWidth = 1000
-gScreenHeight = 1000
+gForegroundImageFilename = data/littleEnvironment.png
+gEnvironmentImageFilename = data/littleEnvironment.png
+gBackgroundImageFilename =  data/littleBackground.png
+gGroundSensorImageFilename = data/littleZones.png
 
-# default environment
-#gForegroundImageFilename =			data/default_foreground.png
-#gEnvironmentImageFilename =			data/default_environment.png
-#gBackgroundImageFilename =			data/default_background.png			
-#gGroundSensorImageFilename =		data/default_groundsensorvalues.png
-#gScreenWidth = 1350
-#gScreenHeight = 800
-
+gScreenWidth = 512
+gScreenHeight = 512
 
 #gLogFilename = logs/log.txt # if commented, create a time-stamped file.
 gLogCommentText = (under-development)
@@ -120,9 +110,9 @@ gInspectorAgentYStart = 1
 
 # robot dynamics and structure
 
-gMaxTranslationalSpeed = 3.0  # value btw 0+ and robot width in pixels
-gMaxTranslationalDeltaValue = 0.5 	# value btw 0+ and gMaxRotationalSpeed
-gMaxRotationalSpeed = 5
+gMaxTranslationalSpeed = 2.0  # value btw 0+ and robot width in pixels
+gMaxTranslationalDeltaValue = 2.0 	# value btw 0+ and gMaxRotationalSpeed
+gMaxRotationalSpeed = 30
 
 gInspectorCursorMaxSpeedOnXaxis = 5
 gInspectorCursorMaxSpeedOnYaxis = 10
@@ -178,8 +168,8 @@ gPhysicalObjectsRedraw = false
 gPhysicalObjectDefaultType = 3
 gPhysicalObjectDefaultRelocate = true
 gPhysicalObjectDefaultOverwrite = false
-gPhysicalObjectDefaultRadius = 4
-gPhysicalObjectDefaultFootprintRadius = 8
+gPhysicalObjectDefaultRadius = 2
+gPhysicalObjectDefaultFootprintRadius = 6
 gPhysicalObjectDefaultDisplayColorRed = 192
 gPhysicalObjectDefaultDisplayColorGreen = 255
 gPhysicalObjectDefaultDisplayColorBlue = 128
@@ -188,7 +178,7 @@ gPhysicalObjectDefaultSolid_h = 16
 gPhysicalObjectDefaultSoft_w = 22
 gPhysicalObjectDefaultSoft_h = 22
 gphysicalObjectDefaultSendMessageTo=-1 
-gPhysicalObjectDefaultRegrowTimeMax = 1000
+gPhysicalObjectDefaultRegrowTimeMax = 1
 
 gEnergyItemDefaultMode = 0
 gEnergyItemDefaultInit = 100
