--- a/Makefile.modular
+++ b/Makefile.modular
@@ -1,6 +1,6 @@
 CC           = g++ 
-CCFLAGS      = -Wall -O3 -std=c++0x
-LDFLAGS      = `sdl-config --cflags --libs`
+CCFLAGS      = -Wall -O3 -std=c++0x -D__unix__ -I/opt/local/include
+LDFLAGS      = `sdl-config  --libs`
 RM           = rm -f 
 MAKE         = make 
 INCLUDE      = -Iinclude/ext -Iinclude/contrib -Iinclude/core -Iprj/
