update of neatest

--- a/config/neatest.properties
+++ b/config/neatest.properties
@@ -11,14 +11,14 @@
 # Main simulation parameters
 #
 
-gInitialNumberOfRobots = 30 # 3000
+gInitialNumberOfRobots = 5 # 3000
 
 gExtendedSensoryInputs = true # Should be rewritten to suit your need. Check code.
 
 gControllerType = 0 		# NEAT
 
 gNbOfLandmarks = 0 # 6, 18
-gNbOfPhysicalObjects = 200 # 300
+gNbOfPhysicalObjects = 10 # 300
 
 gEvaluationTime =   1000
 gMaxIt = 1001000 #-1
@@ -42,18 +42,18 @@ gVerbose = false
 ConfigurationLoaderObjectName = neatestConfigurationLoader
 gGenomeLogFolder = logs/genomes/
 
-gRobotMaskImageFilename = data/minirobot-mask.png
-gRobotSpecsImageFilename = data/minirobot-specs-2sensors.png
+gRobotMaskImageFilename = data/maxirobot-mask.png
+gRobotSpecsImageFilename = data/maxirobot-specs.png
 
 # environment: 400, 600, 1000, 1400x800, 4000
-gForegroundImageFilename = data/env_1000_foreground.png
-gEnvironmentImageFilename = data/env_1000_environment.png
+gForegroundImageFilename = data/env_400_foreground.png
+gEnvironmentImageFilename = data/env_400_environment.png
 #gForegroundImageFilename = data/door_env.png
 #gEnvironmentImageFilename = data/door_env.png
-gBackgroundImageFilename =  data/env_1000_background.png
-gGroundSensorImageFilename = data/env_1000_background.png
-gScreenWidth = 1000
-gScreenHeight = 1000
+gBackgroundImageFilename =  data/env_400_background.png
+gGroundSensorImageFilename = data/env_400_background.png
+gScreenWidth = 400
+gScreenHeight = 400
 
 # default environment
 #gForegroundImageFilename =			data/default_foreground.png
