--- a/config/simpleTest.properties
+++ b/config/simpleTest.properties
@@ -11,19 +11,19 @@
 # Main simulation parameters
 #
 
-gInitialNumberOfRobots = 50 # 3000
+gInitialNumberOfRobots = 1 # 3000
 
 gExtendedSensoryInputs = true # Should be rewritten to suit your need. Check code.
 
 gControllerType = 0 		# NEAT
 
-gNbOfLandmarks = 0 
-gNbOfPhysicalObjects = 150
+gNbOfLandmarks = 0 # 6, 18
+gNbOfPhysicalObjects = 30 # 300
 
-gEvaluationTime =   2000
-gMaxIt = 502000 #-1
+gEvaluationTime =   1000
+gMaxIt = 501000 #-1
 
-gSensorRange = 20
+gSensorRange = 60
 gSynchronization = true # not implemented
 
 gDisplayMode = 0
@@ -46,16 +46,26 @@ gGenomeLogFolder = logs/genomes/
 gEvolutionLogFile = logs/evolution.log
 
 gRobotMaskImageFilename = data/minirobot-mask.png
-gRobotSpecsImageFilename = data/minirobot-specs-8sensors.png
+gRobotSpecsImageFilename = data/minirobot-specs-2sensors.png
 
 # environment: 400, 600, 1000, 1400x800, 4000
-gForegroundImageFilename = data/littleEnvironment.png
-gEnvironmentImageFilename = data/littleEnvironment.png
-gBackgroundImageFilename =  data/littleBackground.png
-gGroundSensorImageFilename = data/littleZones.png
+gForegroundImageFilename = data/env_600_foreground.png
+gEnvironmentImageFilename = data/env_600_environment.png
+#gForegroundImageFilename = data/door_env.png
+#gEnvironmentImageFilename = data/door_env.png
+gBackgroundImageFilename =  data/env_600_background.png
+gGroundSensorImageFilename = data/env_600_background.png
+gScreenWidth = 600
+gScreenHeight = 600
 
-gScreenWidth = 512
-gScreenHeight = 512
+# default environment
+#gForegroundImageFilename =			data/default_foreground.png
+#gEnvironmentImageFilename =			data/default_environment.png
+#gBackgroundImageFilename =			data/default_background.png			
+#gGroundSensorImageFilename =		data/default_groundsensorvalues.png
+#gScreenWidth = 1350
+#gScreenHeight = 800
+
 
 #gLogFilename = logs/log.txt # if commented, create a time-stamped file.
 gLogCommentText = (under-development)
@@ -112,9 +122,9 @@ gInspectorAgentYStart = 1
 
 # robot dynamics and structure
 
-gMaxTranslationalSpeed = 2.0  # value btw 0+ and robot width in pixels
-gMaxTranslationalDeltaValue = 2.0 	# value btw 0+ and gMaxRotationalSpeed
-gMaxRotationalSpeed = 30
+gMaxTranslationalSpeed = 3.0  # value btw 0+ and robot width in pixels
+gMaxTranslationalDeltaValue = 0.5 	# value btw 0+ and gMaxRotationalSpeed
+gMaxRotationalSpeed = 5
 
 gInspectorCursorMaxSpeedOnXaxis = 5
 gInspectorCursorMaxSpeedOnYaxis = 10
@@ -123,9 +133,9 @@ gLocomotionMode = 0
 
 # Neural networks
 
-#gNbHiddenLayers = 0
-#gNbNeuronsPerHiddenLayer = 5
-#gNeuronWeightRange = 10.0  # [-5,+5]
+gNbHiddenLayers = 0
+gNbNeuronsPerHiddenLayer = 5
+gNeuronWeightRange = 10.0  # [-5,+5]
 
 
 # =-=-=-=-=-=
@@ -159,8 +169,8 @@ gEnergyRefill = true # robot energy refill
 
 # Landmarks
 
-#VisibleLandmarks = true
-#gLandmarkRadius = 10.0
+VisibleLandmarks = true
+gLandmarkRadius = 10.0
 
 # Physical objects
 
@@ -170,8 +180,8 @@ gPhysicalObjectsRedraw = false
 gPhysicalObjectDefaultType = 3
 gPhysicalObjectDefaultRelocate = true
 gPhysicalObjectDefaultOverwrite = false
-gPhysicalObjectDefaultRadius = 2
-gPhysicalObjectDefaultFootprintRadius = 6
+gPhysicalObjectDefaultRadius = 4
+gPhysicalObjectDefaultFootprintRadius = 8
 gPhysicalObjectDefaultDisplayColorRed = 192
 gPhysicalObjectDefaultDisplayColorGreen = 255
 gPhysicalObjectDefaultDisplayColorBlue = 128
@@ -180,7 +190,7 @@ gPhysicalObjectDefaultSolid_h = 16
 gPhysicalObjectDefaultSoft_w = 22
 gPhysicalObjectDefaultSoft_h = 22
 gphysicalObjectDefaultSendMessageTo=-1 
-gPhysicalObjectDefaultRegrowTimeMax = 1
+gPhysicalObjectDefaultRegrowTimeMax = 100
 
 gEnergyItemDefaultMode = 0
 gEnergyItemDefaultInit = 100
@@ -189,14 +199,14 @@ gEnergyItemDefaultInit = 100
 # =-=-=-=-=-=
 
 # landmarks. Check gNbOfLandmarks for max value.
-#landmark[0].x = 850
-#landmark[0].y = 800
+landmark[0].x = 850
+landmark[0].y = 800
 
 # Robots. Check gInitialNumberOfRobots for max value.
-#robot[0].x = 100
-#robot[0].y = 100
-#robot[0].orientation = 90			# 0...359, clockwise -- default is 0.
-#robot[0].groupId=0						# default is 0 anyway
+robot[0].x = 100
+robot[0].y = 100
+robot[0].orientation = 90			# 0...359, clockwise -- default is 0.
+robot[0].groupId=0						# default is 0 anyway
 
 #robot[256].x = 50
 #robot[256].y = 50
