--- a/config/neatest.properties
+++ b/config/neatest.properties
@@ -17,8 +17,7 @@ gExtendedSensoryInputs = true # Should be rewritten to suit your need. Check cod
 
 gControllerType = 0 		# NEAT
 
-gNbOfLandmarks = 0 # 6, 18
-gNbOfPhysicalObjects = 10 # 300
+
 
 gEvaluationTime =   1000
 gMaxIt = 1001000 #-1
@@ -31,7 +30,7 @@ gBatchMode = false
 
 gRandomSeed = -1
 
-gVerbose = false
+gVerbose = true
 
 # =-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=
 
@@ -140,7 +139,7 @@ gLocomotionMode = 0
 # simulation parameters
 
 gRadioNetwork = true
-gMaxRadioDistance = 16  # not used. Assume proximity sensor distance.
+gMaxRadioDistance = -1  # not used. Assume proximity sensor distance.
 
 gMonitorPositions = false # slow down if true.
 
@@ -166,18 +165,18 @@ gEnergyRefill = true # robot energy refill
 
 # Landmarks
 
+gNbOfLandmarks = 0 # 6, 18
 #VisibleLandmarks = true
 #gLandmarkRadius = 10.0
 
 # Physical objects
 
-gPhysicalObjectsVisible = true
-gPhysicalObjectsRedraw = false
 
-gPhysicalObjectDefaultType = 3
+
+gPhysicalObjectDefaultType = 0
 gPhysicalObjectDefaultRelocate = true
 gPhysicalObjectDefaultOverwrite = false
-gPhysicalObjectDefaultRadius = 4
+gPhysicalObjectDefaultRadius = 2
 gPhysicalObjectDefaultFootprintRadius = 8
 gPhysicalObjectDefaultDisplayColorRed = 192
 gPhysicalObjectDefaultDisplayColorGreen = 255
@@ -188,6 +187,12 @@ gPhysicalObjectDefaultSoft_w = 22
 gPhysicalObjectDefaultSoft_h = 22
 gphysicalObjectDefaultSendMessageTo=-1 
 gPhysicalObjectDefaultRegrowTimeMax = 1000
+
+gNbOfPhysicalObjects = 5 # 300
+
+gPhysicalObjectsVisible = true
+gPhysicalObjectsRedraw = false
+
 
 gEnergyItemDefaultMode = 0
 gEnergyItemDefaultInit = 100
