Added exploration/locomotion fitness and fixed topology NN (perceptron with recurrent outputs)

--- a/config/neatExploBest.properties
+++ b/config/neatExploBest.properties
@@ -1,5 +1,5 @@
 #
-# Demo: Neat - foraging
+# Demo: Neat - exploration
 # title: TopEDO 
 # date: 2014-10-03
 #
@@ -11,14 +11,14 @@
 # Main simulation parameters
 #
 
-gInitialNumberOfRobots = 50 # 3000
+gInitialNumberOfRobots = 50 # 50
 
 gExtendedSensoryInputs = true # Should be rewritten to suit your need. Check code.
 
 gControllerType = 0 		# NEAT
 
 gNbOfLandmarks = 0 
-gNbOfPhysicalObjects = 150
+gNbOfPhysicalObjects = 0
 
 gEvaluationTime =   2000
 gMaxIt = 502000 #-1
@@ -35,7 +35,7 @@ gVerbose = false
 
 gSelectionMethod = 1
 
-gFitness = 0 #0 Foraging, 1 Floreano's locomotion fitness
+gFitness = 1 #0 Foraging, 1 Floreano's locomotion fitness
 
 # =-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=
 
