--- a/config/neatExploRandom.properties
+++ b/config/neatExploRandom.properties
@@ -1,5 +1,5 @@
 #
-# Demo: Neat - foraging
+# Demo: Neat - exploration
 # title: TopEDO 
 # date: 2014-10-03
 #
@@ -18,7 +18,7 @@ gExtendedSensoryInputs = true # Should be rewritten to suit your need. Check cod
 gControllerType = 0 		# NEAT
 
 gNbOfLandmarks = 0 
-gNbOfPhysicalObjects = 150
+gNbOfPhysicalObjects = 0
 
 gEvaluationTime =   2000
 gMaxIt = 502000 #-1
@@ -33,9 +33,9 @@ gRandomSeed = -1
 
 gVerbose = false
 
-gSelectionMethod = 1
+gSelectionMethod = 4
 
-gFitness = 0 #0 Foraging, 1 Floreano's locomotion fitness
+gFitness = 1 #0 Foraging, 1 Floreano's locomotion fitness
 
 # =-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=
 
