--- a/config/neatForagRB.properties
+++ b/config/neatForagRB.properties
@@ -35,6 +35,8 @@ gVerbose = false
 
 gSelectionMethod = 2
 
+gFitness = 0 #0 Foraging, 1 Floreano's locomotion fitness
+
 # =-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=
 
 #
