--- a/config/neatForagBinTourn.properties
+++ b/config/neatForagBinTourn.properties
@@ -34,6 +34,7 @@ gRandomSeed = -1
 gVerbose = false
 
 gSelectionMethod = 3
+gFitness = 0 #0 Foraging, 1 Floreano's locomotion fitness
 
 # =-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=
 
