--- a/config/neatForagRandom.properties
+++ b/config/neatForagRandom.properties
@@ -35,6 +35,8 @@ gVerbose = false
 
 gSelectionMethod = 4
 
+gFitness = 0 #0 Foraging, 1 Floreano's locomotion fitness
+
 # =-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=
 
 #
