--- a/config/neatest.properties
+++ b/config/neatest.properties
@@ -11,7 +11,7 @@
 # Main simulation parameters
 #
 
-gInitialNumberOfRobots = 5 # 3000
+gInitialNumberOfRobots = 1 # 3000
 
 gExtendedSensoryInputs = true # Should be rewritten to suit your need. Check code.
 
@@ -78,13 +78,13 @@ gSnapshotsFrequency = 50 # every N generations
 
 # general purpose
 
-gPauseMode = false
+gPauseMode = true
 gDisplaySensors = 3   # 0: no, 1: only-contact, 2: all + contacts are red, 3: all (same color)
 gDisplayTail = false
 gRobotDisplayFocus = false
 gDisplayGroundCaption = true
 gNiceRendering = true
-SlowMotionMode = false
+SlowMotionMode = true
 gUserCommandMode = false
 gRobotLEDdisplay = true
 
@@ -176,7 +176,7 @@ gNbOfLandmarks = 0 # 6, 18
 gPhysicalObjectDefaultType = 0
 gPhysicalObjectDefaultRelocate = true
 gPhysicalObjectDefaultOverwrite = false
-gPhysicalObjectDefaultRadius = 2
+gPhysicalObjectDefaultRadius = 5
 gPhysicalObjectDefaultFootprintRadius = 8
 gPhysicalObjectDefaultDisplayColorRed = 192
 gPhysicalObjectDefaultDisplayColorGreen = 255
@@ -188,7 +188,7 @@ gPhysicalObjectDefaultSoft_h = 22
 gphysicalObjectDefaultSendMessageTo=-1 
 gPhysicalObjectDefaultRegrowTimeMax = 1000
 
-gNbOfPhysicalObjects = 5 # 300
+gNbOfPhysicalObjects = 100 # 300
 
 gPhysicalObjectsVisible = true
 gPhysicalObjectsRedraw = false
