--- a/config/neatest.properties
+++ b/config/neatest.properties
@@ -22,7 +22,7 @@ gControllerType = 0 		# NEAT
 gEvaluationTime =   1000
 gMaxIt = 1001000 #-1
 
-gSensorRange = 60
+gSensorRange = 16
 gSynchronization = true # not implemented
 
 gDisplayMode = 0
@@ -41,8 +41,8 @@ gVerbose = true
 ConfigurationLoaderObjectName = neatestConfigurationLoader
 gGenomeLogFolder = logs/genomes/
 
-gRobotMaskImageFilename = data/maxirobot-mask.png
-gRobotSpecsImageFilename = data/maxirobot-specs.png
+gRobotMaskImageFilename = data/minirobot-mask.png
+gRobotSpecsImageFilename = data/minirobot-specs-12sensors.png
 
 # environment: 400, 600, 1000, 1400x800, 4000
 gForegroundImageFilename = data/env_400_foreground.png
@@ -88,8 +88,8 @@ SlowMotionMode = true
 gUserCommandMode = false
 gRobotLEDdisplay = true
 
-gFastDisplayModeSpeed = 60
-gFramesPerSecond = 60
+gFastDisplayModeSpeed = 1 # 60
+gFramesPerSecond = 10 #60
 
 gLocationFinderMaxNbOfTrials = 1000 # 100?
 
@@ -157,27 +157,30 @@ gSigmaMax = 1.0
 
 # Robot energy
 
-gEnergyLevel = false # false: energy is not used
+gEnergyLevel = true # false: energy is not used
 gEnergyInit = 400
 gEnergyMax = 400
 gEnergyRequestOutput = false
 gEnergyRefill = true # robot energy refill
 
-# Landmarks
 
-gNbOfLandmarks = 0 # 6, 18
-#VisibleLandmarks = true
-#gLandmarkRadius = 10.0
+# Landmarks
+gNbOfLandmarks   = 0 
+VisibleLandmarks = false
+gLandmarkRadius  = 10.0
+
 
 # Physical objects
+gNbOfPhysicalObjects    = 100
+gPhysicalObjectsVisible = true
+gPhysicalObjectsRedraw  = true
 
-
-
-gPhysicalObjectDefaultType = 0
+# 0:RoundObject, 1:EnergyItem 2:GateObject 3:SwitchObject
+gPhysicalObjectDefaultType = 1
 gPhysicalObjectDefaultRelocate = true
 gPhysicalObjectDefaultOverwrite = false
-gPhysicalObjectDefaultRadius = 5
-gPhysicalObjectDefaultFootprintRadius = 8
+gPhysicalObjectDefaultRadius = 6
+gPhysicalObjectDefaultFootprintRadius = 10
 gPhysicalObjectDefaultDisplayColorRed = 192
 gPhysicalObjectDefaultDisplayColorGreen = 255
 gPhysicalObjectDefaultDisplayColorBlue = 128
@@ -185,16 +188,10 @@ gPhysicalObjectDefaultSolid_w = 16
 gPhysicalObjectDefaultSolid_h = 16
 gPhysicalObjectDefaultSoft_w = 22
 gPhysicalObjectDefaultSoft_h = 22
-gphysicalObjectDefaultSendMessageTo=-1 
-gPhysicalObjectDefaultRegrowTimeMax = 1000
+gPhysicalObjectDefaultRegrowTimeMax = 0
 
-gNbOfPhysicalObjects = 100 # 300
-
-gPhysicalObjectsVisible = true
-gPhysicalObjectsRedraw = false
-
-
-gEnergyItemDefaultMode = 0
+# Energy items
+gEnergyItemDefaultMode = 0 # see EnergyItem.cpp
 gEnergyItemDefaultInit = 100
 
 
