--- a/config/neatest.properties
+++ b/config/neatest.properties
@@ -11,7 +11,7 @@
 # Main simulation parameters
 #
 
-gInitialNumberOfRobots = 1 # 3000
+gInitialNumberOfRobots = 50 # 3000
 
 gExtendedSensoryInputs = true # Should be rewritten to suit your need. Check code.
 
@@ -84,12 +84,12 @@ gDisplayTail = false
 gRobotDisplayFocus = false
 gDisplayGroundCaption = true
 gNiceRendering = true
-SlowMotionMode = true
+SlowMotionMode = false
 gUserCommandMode = false
 gRobotLEDdisplay = true
 
-gFastDisplayModeSpeed = 1 # 60
-gFramesPerSecond = 10 #60
+gFastDisplayModeSpeed = 60 # 60
+gFramesPerSecond = 60 #60
 
 gLocationFinderMaxNbOfTrials = 1000 # 100?
 
@@ -171,7 +171,7 @@ gLandmarkRadius  = 10.0
 
 
 # Physical objects
-gNbOfPhysicalObjects    = 100
+gNbOfPhysicalObjects    = 50
 gPhysicalObjectsVisible = true
 gPhysicalObjectsRedraw  = true
 
