--- a/config/neatest.properties
+++ b/config/neatest.properties
@@ -11,26 +11,9 @@
 # Main simulation parameters
 #
 
-gInitialNumberOfRobots = 50 # 3000
-
-gExtendedSensoryInputs = true # Should be rewritten to suit your need. Check code.
-
-gControllerType = 0 		# NEAT
 
 
 
-gEvaluationTime =   1000
-gMaxIt = 1001000 #-1
-
-gSensorRange = 16
-gSynchronization = true # not implemented
-
-gDisplayMode = 0
-gBatchMode = false
-
-gRandomSeed = 123456
-
-gVerbose = true
 
 # =-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=
 
@@ -39,36 +22,28 @@ gVerbose = true
 #
 
 ConfigurationLoaderObjectName = neatestConfigurationLoader
-gGenomeLogFolder = logs/genomes/
+gRandomSeed = -1 #123456
 
+
+# environment images
+gForegroundImageFilename   = data/env_400_foreground.png
+gEnvironmentImageFilename  = data/env_400_environment.png
+gBackgroundImageFilename   = data/env_400_background.png
+gGroundSensorImageFilename = data/env_400_background.png
+gScreenWidth  = 400
+gScreenHeight = 400
+
+# robot images 
 gRobotMaskImageFilename = data/minirobot-mask.png
 gRobotSpecsImageFilename = data/minirobot-specs-12sensors.png
 
-# environment: 400, 600, 1000, 1400x800, 4000
-gForegroundImageFilename = data/env_400_foreground.png
-gEnvironmentImageFilename = data/env_400_environment.png
-#gForegroundImageFilename = data/door_env.png
-#gEnvironmentImageFilename = data/door_env.png
-gBackgroundImageFilename =  data/env_400_background.png
-gGroundSensorImageFilename = data/env_400_background.png
-gScreenWidth = 400
-gScreenHeight = 400
-
-# default environment
-#gForegroundImageFilename =			data/default_foreground.png
-#gEnvironmentImageFilename =			data/default_environment.png
-#gBackgroundImageFilename =			data/default_background.png			
-#gGroundSensorImageFilename =		data/default_groundsensorvalues.png
-#gScreenWidth = 1350
-#gScreenHeight = 800
-
-
+# Loging
+gLogCommentText     = (under-development)
+gSnapshots          = false 
+gSnapshotsFrequency = 50 
+gGenomeLogFolder    = logs/genomes/
+gVerbose            = true
 #gLogFilename = logs/log.txt # if commented, create a time-stamped file.
-gLogCommentText = (under-development)
-
-gSnapshots = false # take snapshots
-gSnapshotsFrequency = 50 # every N generations
-
 
 # =-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=
 
@@ -77,55 +52,59 @@ gSnapshotsFrequency = 50 # every N generations
 #
 
 # general purpose
-
-gPauseMode = true
-gDisplaySensors = 3   # 0: no, 1: only-contact, 2: all + contacts are red, 3: all (same color)
-gDisplayTail = false
-gRobotDisplayFocus = false
+gDisplayMode          = true
+gBatchMode            = false
+gPauseMode            = true
+gDisplaySensors       = 2 # 0: no, 1: only-contact, 2:all+contacts are red 3:all
+gDisplayTail          = false
+gRobotDisplayFocus    = false
 gDisplayGroundCaption = true
-gNiceRendering = true
-SlowMotionMode = false
-gUserCommandMode = false
-gRobotLEDdisplay = true
+gNiceRendering        = true
+SlowMotionMode        = false
+gUserCommandMode      = false
+gRobotLEDdisplay      = true
 
-gFastDisplayModeSpeed = 60 # 60
-gFramesPerSecond = 60 #60
-
-gLocationFinderMaxNbOfTrials = 1000 # 100?
-
-gRobotIndexFocus = 0
-
-gNumberOfRobotGroups = 1 # unused
+gFastDisplayModeSpeed = 60 
+gFramesPerSecond      = 60 
 
 gPhysicalObjectIndexStartOffset = 1
-gRobotIndexStartOffset = 1048576  # 0x100000
+gRobotIndexStartOffset          = 1048576  # 0x100000
 
 # Monitoring
-
-gVideoRecording = false # significantly slow down simulation
+gVideoRecording    = false  # significantly slow down simulation
 gTrajectoryMonitor = false  # significantly slow down simulation
-
-gInspectorMode = false
-gInspectorAgent = false
-gMonitorRobot = false
+gInspectorMode     = false
+gInspectorAgent    = false
+gMonitorRobot      = false
+gRadioNetwork      = true
+gMaxRadioDistance  = -1    # not used. Assume proximity sensor distance.
+gMonitorPositions  = false # slow down if true.
+gRobotIndexFocus   = 0
 
 # Inspector cursor (''god mode'')
-
 gInspectorCursorHorizontalSpeed = 1
-gInspectorCursorVerticalSpeed = 1
-gInspectorAgentXStart = 1
-gInspectorAgentYStart = 1
-
-# robot dynamics and structure
-
-gMaxTranslationalSpeed = 3.0  # value btw 0+ and robot width in pixels
-gMaxTranslationalDeltaValue = 0.5 	# value btw 0+ and gMaxRotationalSpeed
-gMaxRotationalSpeed = 5
-
+gInspectorCursorVerticalSpeed   = 1
+gInspectorAgentXStart           = 1
+gInspectorAgentYStart           = 1
 gInspectorCursorMaxSpeedOnXaxis = 5
 gInspectorCursorMaxSpeedOnYaxis = 10
 
-gLocomotionMode = 0
+# robot dynamics and structure
+gMaxTranslationalSpeed      = 3.0  # value btw 0+ and robot width in pixels
+gMaxTranslationalDeltaValue = 0.5  # value btw 0+ and gMaxRotationalSpeed
+gMaxRotationalSpeed         = 5
+gLocomotionMode             = 0
+
+# Robot sensors 
+gInitialNumberOfRobots = 1
+
+gExtendedSensoryInputs = true 
+gNumberOfRobotGroups   = 1
+
+gLocomotionMode        = 0
+
+gSensorRange = 80
+gSynchronization = true # not implemented
 
 # Neural networks
 
@@ -134,44 +113,45 @@ gLocomotionMode = 0
 #gNeuronWeightRange = 10.0  # [-5,+5]
 
 
-# =-=-=-=-=-=
-
-# simulation parameters
-
-gRadioNetwork = true
-gMaxRadioDistance = -1  # not used. Assume proximity sensor distance.
-
-gMonitorPositions = false # slow down if true.
-
-# =-=-=-=-=-=
 
 # parameters wrt. mEDEA
 
-gSigmaMin = 0.001
-gProbaMutation = 0.0
-gUpdateSigmaStep = 0.35
-gSigmaRef = 0.3
-gSigmaMax = 1.0
+gControllerType  = 0 		# NEAT
 
-# =-=-=-=-=-=
+gSigmaMin        = 0.001
+gProbaMutation   = 0.0
+gUpdateSigmaStep = 0.35
+gSigmaRef        = 0.3
+gSigmaMax        = 1.0
+
+gEvaluationTime  = 10
+gMaxIt           = 1010 #-1
+
+
+# =-=-=-=-=-= Objects in the environment
+
+gLocationFinderMaxNbOfTrials = 1000 # 100?
+
 
 # Robot energy
 
-gEnergyLevel = true # false: energy is not used
-gEnergyInit = 400
-gEnergyMax = 400
+gEnergyLevel         = false # use energy
+gEnergyInit          = 400
+gEnergyMax           = 400
 gEnergyRequestOutput = false
-gEnergyRefill = true # robot energy refill
+gEnergyRefill        = true # robot energy refill
 
+# Energy items
+gEnergyItemDefaultMode = 0   # see EnergyItem.cpp
+gEnergyItemDefaultInit = 100
 
 # Landmarks
 gNbOfLandmarks   = 0 
 VisibleLandmarks = false
 gLandmarkRadius  = 10.0
 
-
 # Physical objects
-gNbOfPhysicalObjects    = 50
+gNbOfPhysicalObjects    = 0
 gPhysicalObjectsVisible = true
 gPhysicalObjectsRedraw  = true
 
@@ -190,9 +170,6 @@ gPhysicalObjectDefaultSoft_w = 22
 gPhysicalObjectDefaultSoft_h = 22
 gPhysicalObjectDefaultRegrowTimeMax = 0
 
-# Energy items
-gEnergyItemDefaultMode = 0 # see EnergyItem.cpp
-gEnergyItemDefaultInit = 100
 
 
 # =-=-=-=-=-=
