--- a/config/neatest.properties
+++ b/config/neatest.properties
@@ -42,7 +42,7 @@ gLogCommentText     = (under-development)
 gSnapshots          = false 
 gSnapshotsFrequency = 50 
 gGenomeLogFolder    = logs/genomes/
-gVerbose            = true
+gVerbose            = false
 #gLogFilename = logs/log.txt # if commented, create a time-stamped file.
 
 # =-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=
@@ -96,14 +96,14 @@ gMaxRotationalSpeed         = 5
 gLocomotionMode             = 0
 
 # Robot sensors 
-gInitialNumberOfRobots = 10
+gInitialNumberOfRobots = 100
 
 gExtendedSensoryInputs = true 
 gNumberOfRobotGroups   = 1
 
 gLocomotionMode        = 0
 
-gSensorRange = 80
+gSensorRange = 10
 gSynchronization = true # not implemented
 
 # Neural networks
@@ -124,8 +124,8 @@ gUpdateSigmaStep = 0.35
 gSigmaRef        = 0.3
 gSigmaMax        = 1.0
 
-gEvaluationTime  = 10
-gMaxIt           = 1010 #-1
+gEvaluationTime  = 1000
+gMaxIt           = 10000 #-1
 
 
 # =-=-=-=-=-= Objects in the environment
