Updated positions in config files

--- a/config/neatExploRandomDemo.properties
+++ b/config/neatExploRandomDemo.properties
@@ -311,3 +311,351 @@ gEnergyItemDefaultInit = 100
 #physicalObject[2].sendMessageTo=1 			# send message to object #1 (ie. open gate)
 
 
+robot[0].x = 100
+
+robot[0].y = 50
+
+robot[0].orientation = 90
+ 
+
+robot[1].x = 110
+
+robot[1].y = 60
+
+robot[1].orientation = 90
+ 
+
+robot[2].x = 110
+
+robot[2].y = 70
+
+robot[2].orientation = 90
+ 
+
+robot[3].x = 110
+
+robot[3].y = 80
+
+robot[3].orientation = 90
+ 
+
+robot[4].x = 110
+
+robot[4].y = 90
+
+robot[4].orientation = 90
+ 
+
+robot[5].x = 110
+
+robot[5].y = 100
+
+robot[5].orientation = 90
+ 
+
+robot[6].x = 110
+
+robot[6].y = 110
+
+robot[6].orientation = 90
+ 
+
+robot[7].x = 110
+
+robot[7].y = 120
+
+robot[7].orientation = 90
+ 
+
+robot[8].x = 110
+
+robot[8].y = 130
+
+robot[8].orientation = 90
+ 
+
+robot[9].x = 110
+
+robot[9].y = 140
+
+robot[9].orientation = 90
+ 
+
+robot[10].x = 110
+
+robot[10].y = 150
+
+robot[10].orientation = 90
+ 
+
+robot[11].x = 110
+
+robot[11].y = 160
+
+robot[11].orientation = 90
+ 
+
+robot[12].x = 110
+
+robot[12].y = 50
+
+robot[12].orientation = 90
+ 
+
+robot[13].x = 120
+
+robot[13].y = 60
+
+robot[13].orientation = 90
+ 
+
+robot[14].x = 120
+
+robot[14].y = 70
+
+robot[14].orientation = 90
+ 
+
+robot[15].x = 120
+
+robot[15].y = 80
+
+robot[15].orientation = 90
+ 
+
+robot[16].x = 150
+
+robot[16].y = 90
+
+robot[16].orientation = 90
+ 
+
+robot[17].x = 120
+
+robot[17].y = 100
+
+robot[17].orientation = 90
+ 
+
+robot[18].x = 120
+
+robot[18].y = 110
+
+robot[18].orientation = 90
+ 
+
+robot[19].x = 120
+
+robot[19].y = 120
+
+robot[19].orientation = 90
+ 
+
+robot[20].x = 120
+
+robot[20].y = 130
+
+robot[20].orientation = 90
+ 
+
+robot[21].x = 120
+
+robot[21].y = 140
+
+robot[21].orientation = 90
+ 
+
+robot[22].x = 120
+
+robot[22].y = 150
+
+robot[22].orientation = 90
+ 
+
+robot[23].x = 120
+
+robot[23].y = 160
+
+robot[23].orientation = 90
+ 
+
+robot[24].x = 120
+
+robot[24].y = 50
+
+robot[24].orientation = 90
+ 
+
+robot[25].x = 130
+
+robot[25].y = 60
+
+robot[25].orientation = 90
+ 
+
+robot[26].x = 130
+
+robot[26].y = 70
+
+robot[26].orientation = 90
+ 
+
+robot[27].x = 130
+
+robot[27].y = 80
+
+robot[27].orientation = 90
+ 
+
+robot[28].x = 130
+
+robot[28].y = 90
+
+robot[28].orientation = 90
+ 
+
+robot[29].x = 150
+
+robot[29].y = 80
+
+robot[29].orientation = 90
+ 
+
+robot[30].x = 130
+
+robot[30].y = 110
+
+robot[30].orientation = 90
+ 
+
+robot[31].x = 130
+
+robot[31].y = 120
+
+robot[31].orientation = 90
+ 
+
+robot[32].x = 130
+
+robot[32].y = 130
+
+robot[32].orientation = 90
+ 
+
+robot[33].x = 130
+
+robot[33].y = 140
+
+robot[33].orientation = 90
+ 
+
+robot[34].x = 130
+
+robot[34].y = 150
+
+robot[34].orientation = 90
+ 
+
+robot[35].x = 130
+
+robot[35].y = 160
+
+robot[35].orientation = 90
+ 
+
+robot[36].x = 130
+
+robot[36].y = 50
+
+robot[36].orientation = 90
+ 
+
+robot[37].x = 140
+
+robot[37].y = 60
+
+robot[37].orientation = 90
+ 
+
+robot[38].x = 140
+
+robot[38].y = 70
+
+robot[38].orientation = 90
+ 
+
+robot[39].x = 140
+
+robot[39].y = 80
+
+robot[39].orientation = 90
+ 
+
+robot[40].x = 140
+
+robot[40].y = 90
+
+robot[40].orientation = 90
+ 
+
+robot[41].x = 140
+
+robot[41].y = 100
+
+robot[41].orientation = 90
+ 
+
+robot[42].x = 150
+
+robot[42].y = 70
+
+robot[42].orientation = 90
+ 
+
+robot[43].x = 140
+
+robot[43].y = 120
+
+robot[43].orientation = 90
+ 
+
+robot[44].x = 140
+
+robot[44].y = 130
+
+robot[44].orientation = 90
+ 
+
+robot[45].x = 140
+
+robot[45].y = 140
+
+robot[45].orientation = 90
+ 
+
+robot[46].x = 140
+
+robot[46].y = 150
+
+robot[46].orientation = 90
+ 
+
+robot[47].x = 140
+
+robot[47].y = 160
+
+robot[47].orientation = 90
+ 
+
+robot[48].x = 140
+
+robot[48].y = 50
+
+robot[48].orientation = 90
+ 
+
+robot[49].x = 150
+
+robot[49].y = 60
+
+robot[49].orientation = 90
