--- a/config/neatest.properties
+++ b/config/neatest.properties
@@ -22,7 +22,7 @@
 #
 
 ConfigurationLoaderObjectName = neatestConfigurationLoader
-gRandomSeed = -1 #123456
+gRandomSeed = 1415190718 #-1 #123456
 
 
 # environment images
