--- a/config/neatest.properties
+++ b/config/neatest.properties
@@ -42,7 +42,7 @@ gLogCommentText     = (under-development)
 gSnapshots          = false 
 gSnapshotsFrequency = 50 
 gGenomeLogFolder    = logs/genomes/
-gVerbose            = false
+gVerbose            = true
 #gLogFilename = logs/log.txt # if commented, create a time-stamped file.
 
 # =-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=
