neat test debug

--- a/config/neatest.properties
+++ b/config/neatest.properties
@@ -22,16 +22,16 @@
 #
 
 ConfigurationLoaderObjectName = neatestConfigurationLoader
-gRandomSeed = 1415190718 #-1 #123456
+gRandomSeed = -1 #-1 #123456
 
 
 # environment images
-gForegroundImageFilename   = data/env_100_foreground.png
-gEnvironmentImageFilename  = data/env_100_environment.png
-gBackgroundImageFilename   = data/env_100_background.png
-gGroundSensorImageFilename = data/env_100_background.png
-gScreenWidth  = 100
-gScreenHeight = 100
+gForegroundImageFilename   = data/env_400_foreground.png
+gEnvironmentImageFilename  = data/env_400_environment.png
+gBackgroundImageFilename   = data/env_400_background.png
+gGroundSensorImageFilename = data/env_400_background.png
+gScreenWidth  = 400
+gScreenHeight = 400
 
 # robot images 
 gRobotMaskImageFilename = data/minirobot-mask.png
@@ -42,7 +42,7 @@ gLogCommentText     = (under-development)
 gSnapshots          = false 
 gSnapshotsFrequency = 50 
 gGenomeLogFolder    = logs/genomes/
-gVerbose            = true
+gVerbose            = false
 #gLogFilename = logs/log.txt # if commented, create a time-stamped file.
 
 # =-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=
@@ -96,7 +96,7 @@ gMaxRotationalSpeed         = 5
 gLocomotionMode             = 0
 
 # Robot sensors 
-gInitialNumberOfRobots = 10
+gInitialNumberOfRobots = 100
 
 gExtendedSensoryInputs = true 
 gNumberOfRobotGroups   = 1
@@ -124,8 +124,8 @@ gUpdateSigmaStep = 0.35
 gSigmaRef        = 0.3
 gSigmaMax        = 1.0
 
-gEvaluationTime  = 20
-gMaxIt           = 1000 #-1
+gEvaluationTime  = 200
+gMaxIt           = 10000 #-1
 
 
 # =-=-=-=-=-= Objects in the environment
@@ -151,15 +151,15 @@ VisibleLandmarks = false
 gLandmarkRadius  = 10.0
 
 # Physical objects
-gNbOfPhysicalObjects    = 0
+gNbOfPhysicalObjects    = 100
 gPhysicalObjectsVisible = true
 gPhysicalObjectsRedraw  = true
 
 # 0:RoundObject, 1:EnergyItem 2:GateObject 3:SwitchObject
 gPhysicalObjectDefaultType = 1
-gPhysicalObjectDefaultRelocate = true
+gPhysicalObjectDefaultRelocate = false
 gPhysicalObjectDefaultOverwrite = false
-gPhysicalObjectDefaultRadius = 6
+gPhysicalObjectDefaultRadius = 4
 gPhysicalObjectDefaultFootprintRadius = 10
 gPhysicalObjectDefaultDisplayColorRed = 192
 gPhysicalObjectDefaultDisplayColorGreen = 255
@@ -168,7 +168,7 @@ gPhysicalObjectDefaultSolid_w = 16
 gPhysicalObjectDefaultSolid_h = 16
 gPhysicalObjectDefaultSoft_w = 22
 gPhysicalObjectDefaultSoft_h = 22
-gPhysicalObjectDefaultRegrowTimeMax = 0
+gPhysicalObjectDefaultRegrowTimeMax = 50
 
 
 
