--- a/config/neatest.properties
+++ b/config/neatest.properties
@@ -135,15 +135,15 @@ gLocationFinderMaxNbOfTrials = 1000 # 100?
 
 # Robot energy
 
-gEnergyLevel         = false # use energy
-gEnergyInit          = 400
-gEnergyMax           = 400
+gEnergyLevel         = true # use energy
+gEnergyInit          = 1
+gEnergyMax           = 1
 gEnergyRequestOutput = false
 gEnergyRefill        = true # robot energy refill
 
 # Energy items
 gEnergyItemDefaultMode = 0   # see EnergyItem.cpp
-gEnergyItemDefaultInit = 100
+gEnergyItemDefaultInit = 1
 
 # Landmarks
 gNbOfLandmarks   = 0 
@@ -151,13 +151,13 @@ VisibleLandmarks = false
 gLandmarkRadius  = 10.0
 
 # Physical objects
-gNbOfPhysicalObjects    = 100
+gNbOfPhysicalObjects    = 50
 gPhysicalObjectsVisible = true
 gPhysicalObjectsRedraw  = true
 
 # 0:RoundObject, 1:EnergyItem 2:GateObject 3:SwitchObject
 gPhysicalObjectDefaultType = 1
-gPhysicalObjectDefaultRelocate = false
+gPhysicalObjectDefaultRelocate = true
 gPhysicalObjectDefaultOverwrite = false
 gPhysicalObjectDefaultRadius = 4
 gPhysicalObjectDefaultFootprintRadius = 10
@@ -168,7 +168,7 @@ gPhysicalObjectDefaultSolid_w = 16
 gPhysicalObjectDefaultSolid_h = 16
 gPhysicalObjectDefaultSoft_w = 22
 gPhysicalObjectDefaultSoft_h = 22
-gPhysicalObjectDefaultRegrowTimeMax = 50
+gPhysicalObjectDefaultRegrowTimeMax = 0
 
 
 
