--- a/config/neatest.properties
+++ b/config/neatest.properties
@@ -42,7 +42,7 @@ gLogCommentText     = (under-development)
 gSnapshots          = false 
 gSnapshotsFrequency = 50 
 gGenomeLogFolder    = logs/genomes/
-gVerbose            = false
+gVerbose            = true
 #gLogFilename = logs/log.txt # if commented, create a time-stamped file.
 
 # =-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=
@@ -96,7 +96,7 @@ gMaxRotationalSpeed         = 5
 gLocomotionMode             = 0
 
 # Robot sensors 
-gInitialNumberOfRobots = 100
+gInitialNumberOfRobots = 50
 
 gExtendedSensoryInputs = true 
 gNumberOfRobotGroups   = 1
@@ -135,7 +135,7 @@ gLocationFinderMaxNbOfTrials = 1000 # 100?
 
 # Robot energy
 
-gEnergyLevel         = true # use energy
+gEnergyLevel         = false # use energy
 gEnergyInit          = 1
 gEnergyMax           = 1
 gEnergyRequestOutput = false
@@ -164,10 +164,10 @@ gPhysicalObjectDefaultFootprintRadius = 10
 gPhysicalObjectDefaultDisplayColorRed = 192
 gPhysicalObjectDefaultDisplayColorGreen = 255
 gPhysicalObjectDefaultDisplayColorBlue = 128
-gPhysicalObjectDefaultSolid_w = 16
-gPhysicalObjectDefaultSolid_h = 16
-gPhysicalObjectDefaultSoft_w = 22
-gPhysicalObjectDefaultSoft_h = 22
+gPhysicalObjectDefaultSolid_w = 8
+gPhysicalObjectDefaultSolid_h = 8
+gPhysicalObjectDefaultSoft_w = 11
+gPhysicalObjectDefaultSoft_h = 11
 gPhysicalObjectDefaultRegrowTimeMax = 0
 
 
