Fixed genome adapted. Added properties for selecting btw neat and perceptron

--- a/config/neatForagRBDemo.properties
+++ b/config/neatForagRBDemo.properties
@@ -27,7 +27,7 @@ gSensorRange = 20
 gSynchronization = true # not implemented
 
 gDisplayMode = 0
-gBatchMode = true
+gBatchMode = false
 
 gRandomSeed = -1
 
