--- a/config/neatest.properties
+++ b/config/neatest.properties
@@ -22,7 +22,7 @@
 #
 
 ConfigurationLoaderObjectName = neatestConfigurationLoader
-gRandomSeed = -1 #-1 #123456
+gRandomSeed = -1 # 123456
 
 
 # environment images
@@ -34,7 +34,7 @@ gScreenWidth  = 400
 gScreenHeight = 400
 
 # robot images 
-gRobotMaskImageFilename = data/minirobot-mask.png
+gRobotMaskImageFilename  = data/minirobot-mask.png
 gRobotSpecsImageFilename = data/minirobot-specs-12sensors.png
 
 # Loging
@@ -104,7 +104,7 @@ gNumberOfRobotGroups   = 1
 gLocomotionMode        = 0
 
 gSensorRange = 10
-gSynchronization = true # not implemented
+
 
 # Neural networks
 
@@ -116,7 +116,7 @@ gSynchronization = true # not implemented
 
 # parameters wrt. mEDEA
 
-gControllerType  = 0 		# NEAT
+gControllerType  = 0 		# 0 = NEAT, 1 = FFNN
 
 gSigmaMin        = 0.001
 gProbaMutation   = 0.0
@@ -125,7 +125,9 @@ gSigmaRef        = 0.3
 gSigmaMax        = 1.0
 
 gEvaluationTime  = 200
-gMaxIt           = 10000 #-1
+gMaxIt           = 10000 # sim time (generation = gMaxIt/gEvaluationTime)
+gSynchronization = true  # sync generation 
+gNeatParameters  = prj/neatest/src/explo.ne
 
 
 # =-=-=-=-=-= Objects in the environment
