--- a/config/neatest.properties
+++ b/config/neatest.properties
@@ -96,7 +96,7 @@ gMaxRotationalSpeed         = 5
 gLocomotionMode             = 0
 
 # Robot sensors 
-gInitialNumberOfRobots = 50
+gInitialNumberOfRobots = 100
 
 gExtendedSensoryInputs = true 
 gNumberOfRobotGroups   = 1
@@ -124,9 +124,13 @@ gUpdateSigmaStep = 0.35
 gSigmaRef        = 0.3
 gSigmaMax        = 1.0
 
-gEvaluationTime  = 200
-gMaxIt           = 10000 # sim time (generation = gMaxIt/gEvaluationTime)
-gSynchronization = true  # sync generation 
+gEvaluationTime  = 1000
+gMaxIt           = 250000 # sim time (generation = gMaxIt/gEvaluationTime)
+                          # Eg. for 250 generations and 1000 sim tics/gen 
+                          #  
+
+gSynchronization = true  # sync generations 
+
 gNeatParameters  = prj/neatest/src/explo.ne
 
 
