--- a/config/neatest.properties
+++ b/config/neatest.properties
@@ -22,7 +22,7 @@
 #
 
 ConfigurationLoaderObjectName = neatestConfigurationLoader
-gRandomSeed = -1 # 123456
+gRandomSeed = 123456
 
 
 # environment images
@@ -40,7 +40,7 @@ gRobotSpecsImageFilename = data/minirobot-specs-12sensors.png
 # Loging
 gLogCommentText     = (under-development)
 gSnapshots          = false 
-gSnapshotsFrequency = 50 
+gSnapshotsFrequency = 0 
 gGenomeLogFolder    = logs/genomes/
 gVerbose            = true
 #gLogFilename = logs/log.txt # if commented, create a time-stamped file.
@@ -101,9 +101,9 @@ gInitialNumberOfRobots = 100
 gExtendedSensoryInputs = true 
 gNumberOfRobotGroups   = 1
 
-gLocomotionMode        = 0
+gLocomotionMode        = 0    # 
 
-gSensorRange = 10
+gSensorRange = 40
 
 
 # Neural networks
@@ -116,7 +116,7 @@ gSensorRange = 10
 
 # parameters wrt. mEDEA
 
-gControllerType  = 0 		# 0 = NEAT, 1 = FFNN
+gControllerType  = 1 		# 0 = NEAT, 1 = FFNN
 
 gSigmaMin        = 0.001
 gProbaMutation   = 0.0
@@ -127,7 +127,7 @@ gSigmaMax        = 1.0
 gEvaluationTime  = 1000
 gMaxIt           = 250000 # sim time (generation = gMaxIt/gEvaluationTime)
                           # Eg. for 250 generations and 1000 sim tics/gen 
-                          #  
+                          #  250000
 
 gSynchronization = true  # sync generations 
 
@@ -157,7 +157,7 @@ VisibleLandmarks = false
 gLandmarkRadius  = 10.0
 
 # Physical objects
-gNbOfPhysicalObjects    = 50
+gNbOfPhysicalObjects    = 0
 gPhysicalObjectsVisible = true
 gPhysicalObjectsRedraw  = true
 
