Genetic clocks for innovations numbers added to pure_neat. Relatively well tested.

--- a/config/neatForagBestDemo.properties
+++ b/config/neatForagBestDemo.properties
@@ -11,16 +11,16 @@
 # Main simulation parameters
 #
 
-gInitialNumberOfRobots = 50 # 3000
+gInitialNumberOfRobots = 10 # 3000
 
 gExtendedSensoryInputs = true # Should be rewritten to suit your need. Check code.
 
-gControllerType = 0 		# NEAT
+gControllerType = 0 		# 0 = NEAT, 1 = single-layer perceptron
 
 gNbOfLandmarks = 0 
 gNbOfPhysicalObjects = 150
 
-gEvaluationTime =   2000
+gEvaluationTime =   200
 gMaxIt = 1002000 #-1
 
 gSensorRange = 20
