--- a/config/neatest.properties
+++ b/config/neatest.properties
@@ -22,7 +22,7 @@
 #
 
 ConfigurationLoaderObjectName = neatestConfigurationLoader
-gRandomSeed = 123456
+gRandomSeed = -1 #123456
 
 
 # environment images
@@ -124,8 +124,8 @@ gUpdateSigmaStep = 0.35
 gSigmaRef        = 0.3
 gSigmaMax        = 1.0
 
-gEvaluationTime  = 1000
-gMaxIt           = 250000 # sim time (generation = gMaxIt/gEvaluationTime)
+gEvaluationTime  = 100
+gMaxIt           = 10000 # sim time (generation = gMaxIt/gEvaluationTime)
                           # Eg. for 250 generations and 1000 sim tics/gen 
                           #  250000
 
