Pure neat checked, tests included

--- a/src/contrib/pure_neat/testI/makefile
+++ b/src/contrib/pure_neat/testI/makefile
@@ -9,14 +9,16 @@ CC      = g++
 
 OBJ = ../gene.o ../genome.o ../link.o ../network.o ../nnode.o
 
-TARGET = test
+TARGET = test 
+TARGET2 = test2
 
-all=$(TARGET)
-
-all: $(TARGET)
+all: $(TARGET) $(TARGET2)
 
 %.o: %.cpp
 	$(CC) -o $@ -c $< $(CCFLAGS) $(INCLUDE)
 
 $(TARGET): $(OBJ) test.o
+	$(CC) $(LDFLAGS) -o $@ $^
+
+$(TARGET2): $(OBJ) test2.o
 	$(CC) $(LDFLAGS) -o $@ $^
