--- a/config/neatest.properties
+++ b/config/neatest.properties
@@ -27,8 +27,8 @@ gRandomSeed = -1 #123456
 
 # environment images
 gForegroundImageFilename   = data/env_400_foreground.png
-gEnvironmentImageFilename  = data/env_400_environment-obs.png
-gBackgroundImageFilename   = data/env_400_environment-obs.png
+gEnvironmentImageFilename  = data/env_400_environment.png
+gBackgroundImageFilename   = data/env_400_environment.png
 gGroundSensorImageFilename = data/env_400_background.png
 gScreenWidth  = 400
 gScreenHeight = 400
@@ -96,7 +96,7 @@ gMaxRotationalSpeed         = 5
 gLocomotionMode             = 0
 
 # Robot sensors 
-gInitialNumberOfRobots = 100
+gInitialNumberOfRobots = 50
 gSensorRange           = 20
 
 gExtendedSensoryInputs = true 
@@ -295,3 +295,6 @@ gPhysicalObjectDefaultRegrowTimeMax = 0
 #physicalObject[2].sendMessageTo=1 			# send message to object #1 (ie. open gate)
 
 
+#gBatchMode =true
+
+gInitialNumberOfRobots = 300
