--- a/config/neatest.properties
+++ b/config/neatest.properties
@@ -295,6 +295,6 @@ gPhysicalObjectDefaultRegrowTimeMax = 0
 #physicalObject[2].sendMessageTo=1 			# send message to object #1 (ie. open gate)
 
 
-#gBatchMode =true
+gBatchMode =true
 
 gInitialNumberOfRobots = 300
