--- a/config/neat-exp.properties
+++ b/config/neat-exp.properties
@@ -97,7 +97,7 @@ gMaxRotationalSpeed         = 5
 gLocomotionMode             = 0
 
 # Robot sensors 
-gInitialNumberOfRobots = 1
+gInitialNumberOfRobots = 50
 gSensorRange           = 20
 
 gExtendedSensoryInputs = true 
@@ -123,6 +123,10 @@ gEvaluationTime  = 100
 gMaxIt           = 10000 # sim time (generation = gMaxIt/gEvaluationTime)
                           # Eg. for 250 generations and 1000 sim tics/gen 
                           #  250000
+
+
+gFitnessFunction = 2 # 0: locomotion, 1: collection, 2: forraging 
+
 
 gSynchronization = true  # sync generations 
 
